Employer Profile and the jobpost chip and jobseeker profile chipadding

--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.css
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.css
@@ -40,3 +40,7 @@
 .handsExps:hover{
 		overflow-x:auto !important;
 	}
+.small, small {
+    font-size: 14px !important;
+    font-weight: 600 !important;
+}
