--- a/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
@@ -92,4 +92,54 @@
 			</div>
 		</div>
 	</div>	
+	<ng-container *ngIf="childForm?.value?.otherPref?.extra_criteria?.length > 0">
+		<div class="col-lg-12 mb-3">
+			<h6 class="font-weight-bold mb-2" >Extra Criteria</h6>
+		</div>
+		<div class="row info-box" *ngFor="let extra_criteria of childForm?.value?.otherPref?.extra_criteria; let i = index" >
+			<div class="col-lg-4 caption">
+				<ul class="list-group">
+					<li class="list-group-item text-capitalize">{{extra_criteria?.title}}</li>
+				</ul>
+			</div>
+			<div class="col-lg-6 info">
+				<ul class="list-group">
+					<li class="list-group-item text-capitalize">{{extra_criteria?.value}}</li>
+				</ul>
+			</div>
+			<div class="col-lg-1 col-md-1 d-flex justify-content-center align-items-center" style="padding-top: 20px;">
+				<button type="button" class="btn btn-outline-danger"
+					style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
+			</div>
+		</div>
+	</ng-container>	
+	<button (click)="onOpenCriteriaModal()" type="button" class="btn btn-theme-green" data-toggle="modal"
+			data-target="#addCriteria">Add Another Criteria</button>
 </div>	
+
+<ng-template *ngIf="isOpenCriteriaModal" #criteriaModal let-modal>
+
+	<div *ngIf="t?.controls?.length > 0">
+		<ng-container [formGroup]="t?.controls[0]">
+			<div class="modal-header">
+				<h5 class="modal-title" id="addCriteria">Add Another Criteria</h5>
+				<button  (click)="onCloseCriteriaModal()" type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body" style="min-height:250px;">
+				<input formControlName="title" class="form-control mt-4" type="text" placeholder="Title">
+				<app-control-messages [control]="t?.controls[0]['controls']['title']"></app-control-messages>
+				<input formControlName="value" class="form-control mt-4" type="text" placeholder="Requirement">
+				<app-control-messages [control]="t?.controls[0]['controls']['value']"></app-control-messages>
+			</div>
+			<div class="modal-footer">
+				<button (click)="onCloseCriteriaModal()" type="button" class="btn btn-secondary "
+					data-dismiss="modal">Close</button>
+				<button [disabled]="(childForm?.value?.jobPrev?.temp_extra_criteria[0].title == '') || (childForm?.value?.jobPrev?.temp_extra_criteria[0].value == '')" (click)="onAddExtraCriteria()" type="button" class="btn btn-theme-blue"
+					data-dismiss="modal">Add</button>
+			</div>
+		</ng-container>
+	</div>
+	
+</ng-template>
